# NOMAD-AIRLINES

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE.md  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  util.rs
backend/src/routes/: auth_routes.rs  image_routes.rs  mod.rs  state_routes.rs
backend/tests/: api_tests.rs
docs/: ARCHITECTURE.md  RAILWAY_DEPLOY.md  RENDER_DEPLOY.md
frontend/: index.html
frontend/nomad/: api.js  auth.js  gallery.css  gallery.html  gallery.js  integration.js  mobile.css  parent.css
frontend/src/: file-format-data.js  functions.js  msgbox.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
